[package]
name = "idcard"
version = "0.3.0"
authors = ["hiql <qiu_lin@163.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Chinese Identity Card Utilities."
documentation = "https://docs.rs/idcard"
repository = "https://github.com/hiql/idcard"
keywords = ["idcard", "China", "identification", "number", "validation"]

[dependencies]
lazy_static = "1.4"
chrono = "0.4"
regex = "1"
rand = "0.8"